played with sidebar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="sidebar">
+        <img class="bg-img" src="./resources/etienne-swanepoel-7nr57LTKmKY-unsplash.jpg">
+        <div class="logo-bg">
+            <img class="logo" src="./resources/odin-lined.png" alt="">
+            <h1>ODIN</h1>
+        </div>
+    </div>
     
+    <div class="content">ciao</div>
+
 </body>
 </html>
